--- a/Views/css/estilos.css
+++ b/Views/css/estilos.css
@@ -12,8 +12,20 @@ body {
              background-size: cover;
 }
 
+.width-50 {
+     width: 50%;
+}
+
 .height-100 {
      height: 100%;
+}
+
+.height-80 {
+     height: 80%;
+}
+
+.height-50 {
+     height: 50%;
 }
 
 .bg-dark-alpha {
@@ -25,6 +37,11 @@ body {
 
 .login-form {
      width: 500px;
+     border: 2px solid rgba(0, 0, 0, 0.2);
+}
+
+.register-form {
+     width: 700px;
      border: 2px solid rgba(0, 0, 0, 0.2);
 }
 
